# footfall_predictor

./: README.md  pyproject.toml
footfall_predictor/: main.py
footfall_predictor/api/: predict.py
footfall_predictor/models/: prediction.py
footfall_predictor/services/: holiday_service.py  predictor.py  weather_service.py
